crates/core/tests/snapshots/snapshots__doctor_json_simple_lf.snap
---
source: crates/core/tests/snapshots.rs
expression: parsed
---
{
  "estimated_read_tokens": 53,
  "file": "<fixture>",
  "line_count": 9,
  "next_commands": [
    "linehash read <fixture>",
    "linehash annotate <fixture> <text>",
    "linehash grep <fixture> <pattern>",
    "linehash find-block <fixture> <line:hash>",
    "linehash patch <fixture> <patch.json> --dry-run"
  ],
  "recommended_anchor_mode": "qualified",
  "recommended_read_mode": "read",
  "recommended_workflow": "stats -> annotate/grep -> read --anchor --context -> edit/patch -> verify",
  "suggested_context": 3,
  "warnings": [
    "short-hash collisions detected; prefer qualified anchors like 12:ab",
    "2-char hashes may be cramped for this file; use stats and qualified anchors to avoid ambiguity"
  ]
}
