crates/core/tests/snapshots/snapshots__stats_json_simple_lf.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 74
expression: parsed
---
{
  "collision_count": 2,
  "collision_pair_count": 1,
  "collision_pairs": [
    [
      4,
      9
    ]
  ],
  "collision_pairs_truncated": false,
  "estimated_read_tokens": 53,
  "hash_length_advice": 3,
  "line_count": 9,
  "recommended_anchor_mode": "qualified",
  "recommended_read_mode": "read",
  "recommended_workflow": "stats -> annotate/grep -> read --anchor --context -> edit/patch -> verify",
  "suggested_context_n": 3,
  "unique_hashes": 8,
  "warnings": [
    "short-hash collisions detected; prefer qualified anchors like 12:ab",
    "2-char hashes may be cramped for this file; use stats and qualified anchors to avoid ambiguity"
  ]
}
